--- a/javascript/Q3/sass/_variables.scss
+++ b/javascript/Q3/sass/_variables.scss
@@ -1,4 +1,4 @@
-$colors: ('white':#fff,'black':#000,'grey':#F5F5F2,'grey-border':#EAF1F3,'grey-heading':#102C38);
+$colors: ('white':#fff,'black':#000,'grey':#F5F5F2,'grey-border':#EAF1F3,'grey-heading':#102C38,'green':#357860,'shadow':#24145226);
 
 @font-face {
   font-family: 'FiraSans';
