--- a/javascript/Q3/sass/_table.scss
+++ b/javascript/Q3/sass/_table.scss
@@ -3,8 +3,14 @@ table{
     padding:1rem;
     border-collapse:collapse;
     table-layout: fixed;
-    @include text(14px,400,21px);
+    box-shadow: 0 0.25rem 0.75rem 0 map-get($colors, 'shadow' );
+    @include text(0.875rem,400,1.313rem);
+    thead{
+        border-top:1px solid map-get($colors, 'grey-border');
+    }
     tr{
+        border-top:1px solid map-get($colors, 'grey-border');
+       
         th{
             color:rgba($color:map-get($colors, 'grey-heading'), $alpha: 0.5);
             padding:1rem;
@@ -22,7 +28,6 @@ table{
         }
        
     }
-    tr+tr{
-        border-top:1px solid map-get($colors, 'grey-border');
-    }
+   
+    
 }
