--- a/forex/views/index.html
+++ b/forex/views/index.html
@@ -18,44 +18,49 @@
         <div class="row">
             <div class="dropdowns">
                 <form>
-                    <input type="text" id="currencyDropdown1" list="json-datalist1" placeholder="Choose">
+                    <input type="text" id="currencyDropdown1" list="json-datalist1" placeholder="Choose" class="padding-05">
                     <datalist class="currencyUl" id="json-datalist1"></datalist>
 
-                    <input type="text" id="currencyDropdown2" list="json-datalist2" placeholder="Choose">
+                    <input type="text" id="currencyDropdown2" list="json-datalist2" placeholder="Choose" class="padding-05">
                     <datalist class="currencyUl" id="json-datalist2"></datalist>
                 </form>
             </div>
             <div class="wrapper">
                 <div class="inline">
                     <span class="currency-flag currency-flag-eur flag" id="flag1"></span>
-                    <span class="currency-flag currency-flag-aed flag" id="flag2"></span>
-                    <span class="lt-grey-bg grey" id="greyspan"><p>Forex.com</p></span>
+                    <span class="currency-flag currency-flag-usd flag" id="flag2"></span>
+                    <span class="lt-grey-bg grey" id="greyspan">
+                        <p>Forex.com</p>
+                    </span>
                 </div>
                 <div class="inline sp-between ln-ht-2">
-                    <p>EUR/USD</p>
-                    <p class="left fnt-wt-4">$1.00080</p>
+                    <p><span id="firstCurrency">EUR</span>/<span id="secondCurrency">USD</span></p>
+                    <p class="left fnt-wt-4" id="currentPrice">$ 0</p>
                 </div>
                 <div class="green">
-                    <p class="right">000 (104748%)</p>
+                    <p class="right" id="average">0 (0%)</p>
                 </div>
-            <div class="chart">
-                <canvas id="forexChart"></canvas>
+                <div class="chart">
+                    <canvas id="forexChart"></canvas>
+                </div>
+                <div class="btns center" id="btns-wrapper">
+                    <button type="button" id="btn1" onclick="getTMSData(this)">15M</button>
+                    <button type="button" id="btn2" onclick="getTMSData(this)">1H</button>
+                    <button type="button" id="btn3" onclick="getTMSData(this)">1D</button>
+                    <button type="button" id="btn4" onclick="getTMSData(this)">1W</button>
+                    <button type="button" id="btn5" onclick="getTMSData(this)">1M</button>
+                </div>
             </div>
-            <div class="btns center" id="btns-wrapper">
-                <button type="button" id="btn1" onclick="getTMSData(this)">15M</button>
-                <button type="button" id="btn2" onclick="getTMSData(this)">1H</button>
-                <button type="button" id="btn3" onclick="getTMSData(this)">1D</button>
-                <button type="button" id="btn4" onclick="getTMSData(this)">1W</button>
-                <button type="button" id="btn5" onclick="getTMSData(this)">1M</button> 
-            </div>
-        </div>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.7.7/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/enmaboya/symbols-of-currency@latest/dist/symbols-of-currency.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="../public/javascript/TMSDataClient.js"></script>
     <script src="../public/javascript/index.js"></script>
     <script src="../public/javascript/utils.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+    
+    
 </body>
 
 </html>
